--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/RiveraTheCreator/grupo_4_Animalandia#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
   }
 }
