--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/RiveraTheCreator/grupo_4_Animalandia#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
