--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
+    "json-schema": "^0.4.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.3"
   }
