--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^6.12.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.3",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   }
 }
