--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,8 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize": "^7.0.0-alpha.3",
+    "sequelize-cli": "^6.3.0"
   }
 }
